# HCE_v33_final_allinone_ready

./: .act.secrets.example  .actrc  .coverage  .env.example  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  Makefile  PR_BODY.md  README.md  README.txt  backtest.py  coverage.xml  docker-compose.yml  install_hooks.sh  jest.config.ts  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: auto-fix.yml  autofix.yml  ci.yml  cleanup-actions-runs.yml  codeql.yml  copilot-autofix.yml  docker.yml  format-labeler.yml  hce-autotest-autofix.yml  hce-python-ci.yml  labeler.yml  lint-reviewdog.yml  nightly.yml  pr-labeler.yml  pr-lite.yml  (+5 more)
.prompts/: AGENT.md  ARCHITECT_AGENT.md  BUGFIX.md  DATA_AGENT.md  DEVOPS_AGENT.md  FINOPS_AGENT.md  FUZZER_AGENT.md  INJECTION_SHIELD.md  MULTIAGENT_PLAYBOOK.md  PERF_AGENT.md  PRIVACY_AGENT.md  QA_AGENT.md  RAG_CODE_AGENT.md  REASONER_CRITIC.md  REFACTOR.md  RELEASE_MANAGER.md  REVIEWER.md  SCHEMA_CONTRACT.json  SECURITY_AGENT.md  SRE_AGENT.md  STRUCTURED_OUTPUTS.md  TESTGEN.md  VERIFIER_AGENT.md  _project.yaml
.scripts/: bootstrap_tools.sh  pip_safe.sh
.venvI/: pyvenv.cfg
.venv_ruff/: pyvenv.cfg
ci_logs/: pytest.txt  ruff-format-check.txt
evals/: JUDGER_RUBRICS.md
examples/: A.json  B.json  cfg.yaml
hcebt/: config.py  fills.py  persistence.py  runner.py
hcebt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hooks/: post-commit  pre-push
lib/: __init__.py  kahan.py  timeutil.py
scripts/: auto_pr_fix_ruff.sh  bootstrap.cmd  bootstrap.sh  ci-autofix.sh  ci_grab_last_failure.sh  clean.sh  cleanup_envs.sh  connect.sh  examine.sh  quick_pr.sh  resolve-autofix-conflicts.sh  ruff_fast.cmd  ruff_fast.sh  ruff_fix_fast.cmd  ruff_fix_fast.sh  run_local_all.cmd  run_validation.sh  setup_env.sh  unit_fast.cmd  unit_fast.sh
src/: index.ts
tests/: test_fill_determinism.py  test_fills_branches.py  test_fills_targeted.py  test_kahan.py  test_order_logic_extended.py  test_persistence_paths.py  test_persistence_robustness.py  test_persistence_targeted.py  test_repo_pk.py  test_runner_happy_path.py  test_timeutil.py
(+13 files in other folders)
