[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hcebt"
version = "0.0.0"
requires-python = ">=3.11"
description = "HCE backtest engine"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["hcebt*", "lib*"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true
cache-dir = ".ruff_cache"
show-fixes = true
exclude = ["venv", ".venv", "build", "dist", "migrations", "__pycache__"]


