[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hcebt"
version = "0.0.0"
requires-python = ">=3.11"
description = "HCE backtest engine"
readme = "README.txt"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["hcebt*", "lib*"]

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true
cache-dir = ".ruff_cache"
show-fixes = true
exclude = [
    "venv",
    ".venv",
    ".venv_ruff",
    ".venv-ruff",
    ".venv-ruff-*",
    ".ruff_cache",
    "build",
    "dist",
    "migrations",
    "__pycache__",
]
