[build-system]
requires=['setuptools>=68','wheel']
build-backend='setuptools.build_meta'

[project]
name='hcebt'
version='0.0.0'
requires-python='>=3.11'
description='HCE backtest engine'
readme='README.md'

[tool.setuptools]
package-dir = {''='.'}

[tool.setuptools.packages.find]
where=['.']

[tool.ruff]
line-length=100
target-version='py311'
src=['hcebt','lib']
# Use extend-exclude so Ruff's default excludes (.git, node_modules, etc.) still apply
extend-exclude=['venv','.venv','.ruff_cache','build','dist','__pycache__','migrations','.git/tools-venv','tmp']

[tool.ruff.format]
docstring-code-format=true
quote-style='preserve'

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "C90"]
ignore = ["E203", "E266", "E501"]
mccabe = { max-complexity = 12 }

[tool.ruff.lint.isort]
known-first-party=['hcebt','lib']
combine-as-imports=true
force-sort-within-sections=true
